Fix barcode wrap

--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -159,6 +159,7 @@
   .barcode {
     margin-right: 2em;
     margin-left: 2em;
+    white-space: nowrap;
 
     .barcode_x {
       height: 4em;
